--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-toastify": "^10.0.1",
     "redux": "^5.0.1",
     "source-map-loader": "^4.0.2",
+    "tailwindcss": "^3.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
