--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "dotenv": "^16.4.0",
+    "express": "^4.18.2",
     "framer-motion": "^10.18.0",
     "immer": "^10.0.3",
+    "mongoose": "^8.1.0",
+    "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
