--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,28 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
+# Dependency directories
 /node_modules
-/.pnp
-.pnp.js
 
-# testing
-/coverage
-
-# production
+# Production build
 /build
+/dist
 
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# IDE files
+/.vscode
+/.idea
 
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Environment variables
+.env*
+
+# Editor configuration
+.editorconfig
+
+# OS generated files
+.DS_Store
+Thumbs.db
+
+# Yarn integrity file
+.yarn-integrity
