--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,27 @@
 {
+  "name": "your-project-name",
+  "version": "1.0.0",
+  "description": "Your project description",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js",
+    "test": "mocha tests",
+    "build": "npm i",
+    "dev": "nodemon index.js"
+  },
   "dependencies": {
+    "dotenv": "^16.4.1",
+    "express": "^4.18.2",
     "google-auth-library": "^9.4.2",
-    "googleapis": "^131.0.0"
-  }
+    "googleapis": "^131.0.0",
+    "mongoose": "^8.1.1",
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.0.3"
+  },
+  "devDependencies": {
+    "mocha": "^8.4.0"
+  },
+  "keywords": ["Node.js", "example"],
+  "author": "Your Name",
+  "license": "MIT"
 }
