--- a/server/package.json
+++ b/server/package.json
@@ -4,10 +4,10 @@
   "description": "Your project description",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node server.js",
     "test": "mocha tests",
     "build": "npm i",
-    "dev": "nodemon index.js"
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "dotenv": "^16.4.1",
